# ajax_speech_comparisons

./: LICENSE  README.md  experiments.ipynb  pyproject.toml  tokenize_and_lemmatize.ipynb
ajax_odysseus_speech_analysis/: experiments.py  group_speeches.py  lemmatized_text.py
data/: urn:cts:greekLit:tlg0011.tlg003.perseus-grc2.cp-words.csv
